2009-01-12  Thorsten Meyer  <thorsten.meyier@gmx.de>

	* strfns.cc (Fstrvcap): New function.
	
2008-11-29  Thorsten Meyer  <thorsten.meyier@gmx.de>

        * strfns.cc (Fchar, Fischar, Fstrncmp, Flist_in_columns):
	Improve documentation strings.  Add examples and tests.
        
2009-01-12  Jaroslav Hajek  <highegg@gmail.com>

	* ov-perm.cc (octave_perm_matrix::do_index_op): Return shallow copy
	when indexed by (:,:).
	* ov-base-mat.cc (octave_base_diag::do_index_op): Return shallow copy
	when indexed by (:,:). Optimize indexing equivalent to resizing.
	* data.cc: Fix tests.
	* mappers.cc: Fix tests.

2009-01-12  Jaroslav Hajek  <highegg@gmail.com>

	* ov-base-diag.h, ov-base-mat.h, ov-base-scalar.h, ov-base-sparse.h,
	ov-base.cc, ov-base.h, ov-perm.h, ov-range.h, ov.h: Add full_value
	methods to octave_value, octave_base_value and its relevant
	subclasses.
	* data.cc (Ffull): New DEFUN.
	* DLD-FUNCTIONS/sparse.cc (Ffull): move to data.cc.
2009-01-11  Jaroslav Hajek  <highegg@gmail.com>
	
	* ov.h (octave_value::is_copy_of): New method.
	* ov-struct.cc (numeric_conv): Add output parameter orig.
	(octave_struct::subsasgn): Temporarily erase duplicate lhs value prior
	to assignment.

2009-01-11  Jaroslav Hajek  <highegg@gmail.com>

	* oct-obj.cc (octave_value_list::all_scalars): New method.
	* oct-obj.h: Declare it.
	* ov-cell.cc (octave_cell::subsasgn): Disable assigning
	to non-scalar {}-indexed cell, unless in a multi-assignment.

2009-01-10  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/sparse.cc (Ffull): Convert diagonal & permutation
	matrices, leave other classes untouched.

2009-01-09  Jaroslav Hajek  <highegg@gmail.com>

	* OPERATORS/op-cdm-cdm.cc: Install missing widening op.
	* OPERATORS/op-dm-dm.cc: Dtto.
	* OPERATORS/op-fcdm-fcdm.cc: Dtto.
	* OPERATORS/op-fdm-fdm.cc: Dtto.
	* OPERATORS/op-pm-pm.cc: Dtto.
	* OPERATORS/op-fpm-fpm.cc: Dtto.

2009-01-09  Jaroslav Hajek  <highegg@gmail.com>
